# typeql

./: .bazelignore  .bazelrc  .gitignore  BUILD  BZLMOD_MIGRATION_PLAN.md  BZLMOD_MIGRATION_STATUS.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  TypeQL.java  VERSION  WORKSPACE  deployment.bzl  deployment.properties  requirements.txt
.circleci/: config.yml
.factory/: automation.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.grabl/: automation.yml
.pyBAZEL/: pyvenv.cfg
common/: BUILD  TypeQLArg.java  TypeQLToken.java
common/exception/: ErrorMessage.java  TypeQLException.java
common/java/: BUILD  deployment.bzl
common/java/.factory/: automation.yml
common/java/binary/: BUILD  typedb  typedb.bat
common/java/collection/: Bytes.java  Collections.java  ConcurrentSet.java  Either.java  Pair.java  Triple.java  (+1 more)
common/util/: Strings.java
dependencies/compilers/: BUILD  dependencies.bzl  maven-https.patch
dependencies/git/: dependencies.bzl
dependencies/graknlabs/: dependencies.bzl  repositories.bzl
dependencies/maven/: BUILD  artifacts.bzl  artifacts.snapshot  dependencies.bzl  dependencies.yaml  rules.bzl  update.sh
dependencies/typedb/: repositories.bzl
dependencies/vaticle/: BUILD  repositories.bzl
docs/: deps.sh  java-package-structure.dot
grammar/: BUILD  Graql.g4  README.md  TypeQL.g4
grammar/java/: BUILD
grammar/python/: BUILD
grammar/rust/: BUILD
java/: .gitignore  BUILD  Graql.java  LICENSE  README.md  TypeQL.java  deployment.bzl
java/.github/: CODEOWNERS
java/builder/: BUILD  ConceptVariableBuilder.java  ValueVariableBuilder.java
java/common/: BUILD  GraqlArg.java  GraqlToken.java  Reference.java  TypeQLArg.java  TypeQLToken.java  TypeQLVariable.java
java/docs/: deps.sh  package-structure.dot
java/exception/: ErrorMessage.java  GraqlException.java
java/parser/: BUILD  ErrorListener.java  Parser.java  SyntaxError.java
java/pattern/: BUILD  Conjunctable.java  Conjunction.java  Definable.java  Disjunction.java  Negation.java  Pattern.java
java/projection/: ProjectionKeyBuilder.java
java/property/: AbstractProperty.java  DataTypeProperty.java  HasAttributeProperty.java  HasAttributeTypeProperty.java  IdProperty.java  IsaProperty.java  NeqProperty.java  PlaysProperty.java  Property.java  RegexProperty.java  RelatesProperty.java  RelationProperty.java  SubProperty.java  ThenProperty.java  ThingProperty.java  TypeProperty.java  ValueClassProperty.java  ValueProperty.java  ValueTypeProperty.java  VarProperty.java  WhenProperty.java
java/query/: BUILD  GraqlCompute.java  GraqlDefinable.java  GraqlDefine.java  GraqlDelete.java  GraqlGet.java  GraqlInsert.java  GraqlMatch.java  GraqlQuery.java  GraqlUndefine.java  GraqlUpdate.java  GraqlWritable.java  MatchClause.java  TypeQLCompute.java  TypeQLDefinable.java  TypeQLDefine.java  TypeQLDelete.java  TypeQLFetch.java  TypeQLGet.java  TypeQLInsert.java  TypeQLMatch.java  TypeQLQuery.java  TypeQLUndefine.java  TypeQLUpdate.java  TypeQLWritable.java
java/statement/: Label.java  Statement.java  StatementAttribute.java  StatementInstance.java  StatementRelation.java  StatementThing.java  StatementType.java  Variable.java
java/test/: BUILD
java/util/: Collections.java  StringUtil.java  Triple.java  Tuple.java
java/variable/: Identity.java  ThingVariable.java  TypeVariable.java  UnscopedVariable.java  Variable.java
parser/: BUILD  ErrorListener.java  Parser.java  SyntaxError.java  parser.rs
parser/test/: BUILD  ParserTest.java
pattern/: BUILD  Conjunctable.java  Conjunction.java  Definable.java  Disjunction.java  Negation.java  Pattern.java
pattern/constraint/: ConceptConstraint.java  Constraint.java  ThingConstraint.java  TypeConstraint.java
pattern/schema/: Rule.java
pattern/test/: BUILD  NormalisationTest.java
pattern/variable/: BoundVariable.java  ConceptVariable.java  Reference.java  ThingVariable.java  TypeVariable.java  UnboundVariable.java  Variable.java
plugins/: BUILD
plugins/jetbrains-plugin/: README.md  build.gradle  settings.gradle
query/: BUILD  TypeQLCompute.java  TypeQLDefinable.java  TypeQLDefine.java  TypeQLDelete.java  TypeQLInsert.java  TypeQLMatch.java  TypeQLQuery.java  TypeQLUndefine.java  TypeQLUpdate.java  TypeQLWritable.java
query/builder/: Aggregatable.java  Computable.java  Sortable.java
query/test/: BUILD  TypeQLDeleteTest.java  TypeQLQueryTest.java
rust/: BUILD  Cargo.toml  WORKSPACE  annotation.rs  deployment.bzl  identifier.rs  pretty.rs  rustfmt.toml  type_.rs  typeql.rs  typeql_lang.rs  value.rs  variable.rs
rust/annotation/: mod.rs
rust/benches/: BUILD  bench_parser.rs
rust/builder/: mod.rs
rust/common/: date_time.rs  error.rs  identifier.rs  mod.rs  string.rs  token.rs  validatable.rs  variabilizable.rs  variables_retrieved.rs
rust/definition/: function.rs  mod.rs  struct_.rs
rust/error/: mod.rs
rust/expression/: mod.rs
rust/parser/: annotation.rs  data.rs  error_listener.rs  expression.rs  literal.rs  mod.rs  parser.rs  pipeline.rs  redefine.rs  schema.rs  statement.rs  syntax_error.rs  type_.rs  typeql.pest
rust/pattern/: conjunctable.rs  conjunction.rs  constant.rs  disjunction.rs  label.rs  literal.rs  mod.rs  named_references.rs  negation.rs  pattern.rs  scope.rs
rust/query/: aggregatable.rs  aggregate.rs  define.rs  match_clause.rs  mod.rs  modifier.rs  typeql_define.rs  typeql_delete.rs  typeql_fetch.rs  typeql_get.rs  typeql_get_aggregate.rs  typeql_get_group.rs  typeql_insert.rs  typeql_match.rs  typeql_match_aggregate.rs  typeql_match_group.rs  typeql_match_group_aggregate.rs  typeql_undefine.rs  typeql_update.rs  undefine.rs  writable.rs
rust/schema/: mod.rs
rust/statement/: comparison.rs  mod.rs  type_.rs
rust/util/: mod.rs
rust/variable/: mod.rs  type_reference.rs  variable.rs  variable_concept.rs  variable_value.rs
test/: BUILD
test/deployment/: pom.xml
tool/release/: BUILD  create_notes.sh
tool/rust/: BUILD  sync.sh
tools/release/: BUILD  create_notes.sh
(+357 files in other folders)
