
[workspace]
	resolver = "2"
	members = ["rust", "rust/tests/behaviour"]

	[workspace.dependencies]

		[workspace.dependencies.tokio]
			features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "mio", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros"]
			version = "1.48.0"
			default-features = false

		[workspace.dependencies.pest]
			features = ["default", "memchr", "std"]
			version = "2.8.3"
			default-features = false

		[workspace.dependencies.regex]
			features = ["default", "perf", "perf-backtrack", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "perf-onepass", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"]
			version = "1.12.2"
			default-features = false

		[workspace.dependencies.cucumber]
			features = ["default", "macros"]
			version = "0.19.1"
			default-features = false

		[workspace.dependencies.pest_derive]
			features = ["default", "std"]
			version = "2.8.3"
			default-features = false

		[workspace.dependencies.syn]
			features = ["clone-impls", "default", "derive", "extra-traits", "fold", "full", "parsing", "printing", "proc-macro", "visit", "visit-mut"]
			version = "2.0.110"
			default-features = false

		[workspace.dependencies.typeql]
			path = "rust"
			features = []
			default-features = false

		[workspace.dependencies.proc-macro2]
			features = ["default", "proc-macro"]
			version = "1.0.103"
			default-features = false

		[workspace.dependencies.futures]
			features = ["alloc", "async-await", "default", "executor", "futures-executor", "std", "thread-pool"]
			version = "0.3.31"
			default-features = false

		[workspace.dependencies.chrono]
			features = ["alloc", "clock", "default", "iana-time-zone", "js-sys", "now", "oldtime", "serde", "std", "wasm-bindgen", "wasmbind", "winapi", "windows-link"]
			version = "0.4.43"
			default-features = false

		[workspace.dependencies.itertools]
			features = ["default", "use_alloc", "use_std"]
			version = "0.10.5"
			default-features = false

		[workspace.dependencies.steps]
			path = "rust/tests/behaviour"
			features = []
			default-features = false

