# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typeql",
    version = "0.0.0",
    compatibility_level = 1,
)

# ===========================================================
# Common
# ===========================================================

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# ===========================================================
# Languages & toolchains
# ===========================================================

# Rust
bazel_dep(name = "rules_rust", version = "0.56.0")
# Backport a bug fix from rules_rust 0.58 (bazelbuild/rules_rust#3251)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust",
    tag = "0.56.0",
    patches = ["@@typedb_dependencies+//patches:rules_rust.patch"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
    rustfmt_version = "nightly/2026-04-15",
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(version = "1.93.0")

# Python
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.0.0")
register_toolchains("@rules_kotlin//kotlin/internal:default_toolchain")

# Java
bazel_dep(name = "rules_java", version = "8.6.2")

# ===========================================================
# Package managers
# ===========================================================

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crates")

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.6")

# ===========================================================
# TypeDB repos
# ===========================================================

bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/typedb/dependencies",
    commit = "00d895243d72e2b19b0e5dc121eec4f0ed8eb532",
)

bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "4e400ddcc52da12809db323874eb3516ee9ab5c3",
)

bazel_dep(name = "typedb_behaviour", version = "0.0.0")
git_override(
    module_name = "typedb_behaviour",
    remote = "https://github.com/typedb/typedb-behaviour",
    commit = "1bcff848a89927bf2e640112e330f8d726de1b35",
)

# workspace_refs for rust sync
# Creates a refs.json file with version information from dependencies
workspace_refs = use_repo_rule("@typedb_bazel_distribution//common/workspace_refs:rules.bzl", "_workspace_refs")
workspace_refs(
    name = "typeql_workspace_refs",
    workspace_commit_dict = {},
    workspace_tag_dict = {},
)

